# Try_ksnctf

./: .gitignore  Cargo.toml  Problem01.ipynb  Problem38.ipynb
.ipynb_checkpoints/: Problem01-checkpoint.ipynb
02/: Problem02.ipynb  auto_cipher_tool.html  result.txt
03/: Problem03.ipynb
04/: Problem04.ipynb
05/: Problem05.ipynb
06/: Problem06.ipynb
07/: Problem07.ipynb
08/: Problem08.ipynb
09/: Problem09.ipynb
10/: Problem10.ipynb
11/: Problem11.ipynb
12/: Problem12.ipynb
13/: Problem13.ipynb
14/: Problem 14.ipynb
15/: Problem15.ipynb
16/: Problem16.ipynb
17/: Problem17.ipynb
18/: Problem18.ipynb
19/: Problem19.ipynb
20/: Problem20.ipynb
21/: Problem21.ipynb
22/: Problem22.ipynb
23/: Problem23.ipynb
24/: Problem24.ipynb
25/: Problem25.ipynb
26/: Problem26.ipynb
27/: Problem27.ipynb
28/: Problem28.ipynb
29/: Problem29.ipynb
30/: Problem30.ipynb
31/: Problem31.ipynb
32/: Dockerfile  Problem32.ipynb  docker-compose.yml  memo.txt
33/: Problem33.ipynb
34/: Cargo.toml  Problem34.ipynb  hex_cnn_model.mpk
34/src/: decode.rs  infer.rs  train.rs
34/trainer/: decode.py  hex_cnn_model.mpk
35/: Dockerfile  Problem35.ipynb  README.md  database.db  init_db.py
36/: Dockerfile  Problem36.ipynb  README.md
36/esp_solver/: Cargo.toml
36/esp_solver/src/: main.rs
37/: Problem37.ipynb  Problem37.rs
37/docker_ctf/: Dockerfile.server  Dockerfile.solver  README.md  docker-compose.yml
38/: flag.jpg.enc
39/: Problem39.ipynb
40/: Problem40.ipynb  model.onnx
41/: Problem41.ipynb
(+2 files in other folders)
